include/Urban.h

// Opaque handle type (pointer to private struct)
typedef struct _p_UrbanType *UrbanType;
// Error codes for API calls
typedef enum {
  URBAN_SUCCESS = 0,
  URBAN_ERR_INVALID_ARGUMENT = 1,
  URBAN_ERR_NOT_INITIALIZED = 2,
  URBAN_ERR_INTERNAL = 3,
  URBAN_ERR_SIZE_MISMATCH = 4
} UrbanErrorCode;
// Infiltration input setter functions (pervious road)
URBAN_EXTERN void UrbanSetSurfaceRunoffForPerviousRoad(UrbanType urban,
                                                       const double *values,
                                                       int length,
                                                       UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetGroundEvapFluxForPerviousRoad(UrbanType urban,
                                                        const double *values,
                                                        int length,
                                                        UrbanErrorCode *status);
// Infiltration compute function (no dtime needed — pure arithmetic)
URBAN_EXTERN void UrbanComputeInfiltration(UrbanType urban,
                                           UrbanErrorCode *status);
// Infiltration getter function
URBAN_EXTERN void UrbanGetInfiltrationFluxPerviousRoad(UrbanType urban,
                                                       double *values,
                                                       int length,
                                                       UrbanErrorCode *status);
// Soil evaporation flux getter functions
URBAN_EXTERN void UrbanGetEvapFluxRoof(UrbanType urban, double *values,
                                       int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetEvapFluxImperviousRoad(UrbanType urban,
                                                 double *values, int length,
                                                 UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetEvapFluxPerviousRoad(UrbanType urban, double *values,
                                               int length,
                                               UrbanErrorCode *status);
// Cgrnds (d(sensible heat flux)/dT) getter functions
URBAN_EXTERN void UrbanGetCgrndsRoof(UrbanType urban, double *values,
                                     int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetCgrndsImperviousRoad(UrbanType urban, double *values,
                                               int length,
                                               UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetCgrndsPerviousRoad(UrbanType urban, double *values,
                                             int length,
                                             UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetCgrndsSunlitWall(UrbanType urban, double *values,
                                           int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetCgrndsShadedWall(UrbanType urban, double *values,
                                           int length, UrbanErrorCode *status);
// Cgrndl (d(latent heat flux)/dT) getter functions
URBAN_EXTERN void UrbanGetCgrndlRoof(UrbanType urban, double *values,
                                     int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetCgrndlImperviousRoad(UrbanType urban, double *values,
                                               int length,
                                               UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetCgrndlPerviousRoad(UrbanType urban, double *values,
                                             int length,
                                             UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetCgrndlSunlitWall(UrbanType urban, double *values,
                                           int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetCgrndlShadedWall(UrbanType urban, double *values,
                                           int length, UrbanErrorCode *status);
// Layer temperature getter functions
URBAN_EXTERN void UrbanGetLayerTempRoof(UrbanType urban, double *values,
                                        const int size[2],
                                        UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetLayerTempImperviousRoad(UrbanType urban,
                                                  double *values,
                                                  const int size[2],
                                                  UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetLayerTempPerviousRoad(UrbanType urban, double *values,
                                                const int size[2],
                                                UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetLayerTempSunlitWall(UrbanType urban, double *values,
                                              const int size[2],
                                              UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetLayerTempShadedWall(UrbanType urban, double *values,
                                              const int size[2],
                                              UrbanErrorCode *status);
// Hydrology getter functions (pervious road)
URBAN_EXTERN void UrbanGetSoilLiquidWaterPerviousRoad(UrbanType urban,
                                                      double *values,
                                                      const int size[2],
                                                      UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetSoilVolumetricWaterPerviousRoad(
    UrbanType urban, double *values, const int size[2], UrbanErrorCode *status);
URBAN_EXTERN void
UrbanGetAquiferRechargeRatePerviousRoad(UrbanType urban, double *values,
                                        int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetWaterDeficitFluxPerviousRoad(UrbanType urban,
                                                       double *values,
                                                       int length,
                                                       UrbanErrorCode *status);
// ============================================================================
// WaterTable setter functions (pervious road inputs)
// ============================================================================
URBAN_EXTERN void UrbanSetAquiferWaterForPerviousRoad(UrbanType urban,
                                                      const double *values,
                                                      int length,
                                                      UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetFracH2osfcForPerviousRoad(UrbanType urban,
                                                    const double *values,
                                                    int length,
                                                    UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetDewGrndFluxForPerviousRoad(UrbanType urban,
                                                     const double *values,
                                                     int length,
                                                     UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetDewSnowFluxForPerviousRoad(UrbanType urban,
                                                     const double *values,
                                                     int length,
                                                     UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetSubSnowFluxForPerviousRoad(UrbanType urban,
                                                     const double *values,
                                                     int length,
                                                     UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetQchargeForPerviousRoad(UrbanType urban,
                                                 const double *values,
                                                 int length,
                                                 UrbanErrorCode *status);
// WaterTable compute function
URBAN_EXTERN void UrbanComputeWaterTable(UrbanType urban, double dtime,
                                         UrbanErrorCode *status);