include/urban_mod.F90


    ! Soil evaporation flux getter functions
    subroutine UrbanGetEvapFluxRoof_C(urban, values, length, status) &
      bind(C, name="UrbanGetEvapFluxRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetEvapFluxRoof_C

    subroutine UrbanGetEvapFluxImperviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetEvapFluxImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetEvapFluxImperviousRoad_C

    subroutine UrbanGetEvapFluxPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetEvapFluxPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetEvapFluxPerviousRoad_C

    ! Cgrnds (d(sensible heat flux)/dT) getter functions
    subroutine UrbanGetCgrndsRoof_C(urban, values, length, status) &
      bind(C, name="UrbanGetCgrndsRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetCgrndsRoof_C

    subroutine UrbanGetCgrndsImperviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetCgrndsImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetCgrndsImperviousRoad_C

    subroutine UrbanGetCgrndsPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetCgrndsPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetCgrndsPerviousRoad_C

    subroutine UrbanGetCgrndsSunlitWall_C(urban, values, length, status) &
      bind(C, name="UrbanGetCgrndsSunlitWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetCgrndsSunlitWall_C

    subroutine UrbanGetCgrndsShadedWall_C(urban, values, length, status) &
      bind(C, name="UrbanGetCgrndsShadedWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetCgrndsShadedWall_C

    ! Cgrndl (d(latent heat flux)/dT) getter functions
    subroutine UrbanGetCgrndlRoof_C(urban, values, length, status) &
      bind(C, name="UrbanGetCgrndlRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetCgrndlRoof_C

    subroutine UrbanGetCgrndlImperviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetCgrndlImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetCgrndlImperviousRoad_C

    subroutine UrbanGetCgrndlPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetCgrndlPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetCgrndlPerviousRoad_C

    subroutine UrbanGetCgrndlSunlitWall_C(urban, values, length, status) &
      bind(C, name="UrbanGetCgrndlSunlitWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetCgrndlSunlitWall_C

    subroutine UrbanGetCgrndlShadedWall_C(urban, values, length, status) &
      bind(C, name="UrbanGetCgrndlShadedWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetCgrndlShadedWall_C

    ! Layer temperature getter functions (2D)
    subroutine UrbanGetLayerTempRoof_C(urban, values, size, status) &
      bind(C, name="UrbanGetLayerTempRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(2) :: size
      integer(c_int) :: status
    end subroutine UrbanGetLayerTempRoof_C

    subroutine UrbanGetLayerTempImperviousRoad_C(urban, values, size, status) &
      bind(C, name="UrbanGetLayerTempImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(2) :: size
      integer(c_int) :: status
    end subroutine UrbanGetLayerTempImperviousRoad_C

    subroutine UrbanGetLayerTempPerviousRoad_C(urban, values, size, status) &
      bind(C, name="UrbanGetLayerTempPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(2) :: size
      integer(c_int) :: status
    end subroutine UrbanGetLayerTempPerviousRoad_C

    subroutine UrbanGetLayerTempSunlitWall_C(urban, values, size, status) &
      bind(C, name="UrbanGetLayerTempSunlitWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(2) :: size
      integer(c_int) :: status
    end subroutine UrbanGetLayerTempSunlitWall_C

    subroutine UrbanGetLayerTempShadedWall_C(urban, values, size, status) &
      bind(C, name="UrbanGetLayerTempShadedWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(2) :: size
      integer(c_int) :: status
    end subroutine UrbanGetLayerTempShadedWall_C

    ! Hydrology getter functions (pervious road)
    subroutine UrbanGetSoilLiquidWaterPerviousRoad_C(urban, values, size, status) &
      bind(C, name="UrbanGetSoilLiquidWaterPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(2) :: size
      integer(c_int) :: status
    end subroutine UrbanGetSoilLiquidWaterPerviousRoad_C

    subroutine UrbanGetSoilVolumetricWaterPerviousRoad_C(urban, values, size, status) &
      bind(C, name="UrbanGetSoilVolumetricWaterPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(2) :: size
      integer(c_int) :: status
    end subroutine UrbanGetSoilVolumetricWaterPerviousRoad_C

    subroutine UrbanGetAquiferRechargeRatePerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetAquiferRechargeRatePerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetAquiferRechargeRatePerviousRoad_C

    subroutine UrbanGetWaterDeficitFluxPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetWaterDeficitFluxPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetWaterDeficitFluxPerviousRoad_C

    ! Infiltration input setter C interfaces
    subroutine UrbanSetSurfaceRunoffForPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetSurfaceRunoffForPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetSurfaceRunoffForPerviousRoad_C

    subroutine UrbanSetGroundEvapFluxForPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetGroundEvapFluxForPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetGroundEvapFluxForPerviousRoad_C

    ! Infiltration compute C interface
    subroutine UrbanComputeInfiltration_C(urban, status) &
      bind(C, name="UrbanComputeInfiltration")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      integer(c_int) :: status
    end subroutine UrbanComputeInfiltration_C

    ! Infiltration getter C interface
    subroutine UrbanGetInfiltrationFluxPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetInfiltrationFluxPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetInfiltrationFluxPerviousRoad_C

    ! WaterTable setter C interfaces
    subroutine UrbanSetAquiferWaterForPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetAquiferWaterForPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetAquiferWaterForPerviousRoad_C

    subroutine UrbanSetFracH2osfcForPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetFracH2osfcForPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetFracH2osfcForPerviousRoad_C

    subroutine UrbanSetDewGrndFluxForPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetDewGrndFluxForPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetDewGrndFluxForPerviousRoad_C

    subroutine UrbanSetDewSnowFluxForPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetDewSnowFluxForPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetDewSnowFluxForPerviousRoad_C

    subroutine UrbanSetSubSnowFluxForPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetSubSnowFluxForPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetSubSnowFluxForPerviousRoad_C

    subroutine UrbanSetQchargeForPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetQchargeForPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetQchargeForPerviousRoad_C

    ! WaterTable compute C interface
    subroutine UrbanComputeWaterTable_C(urban, dtime, status) &
      bind(C, name="UrbanComputeWaterTable")
      import :: c_ptr, c_int, c_double
      type(c_ptr), value :: urban
      real(c_double), value :: dtime
      integer(c_int) :: status
    end subroutine UrbanComputeWaterTable_C
